--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
+asgiref==3.5.0
+cycler==0.11.0
 Django==3.2.3
-psycopg2
+fonttools==4.31.2
+joblib==1.1.0
+kiwisolver==1.4.0
+matplotlib==3.5.1
+numpy==1.22.3
+packaging==21.3
+pandas==1.4.1
+Pillow==9.0.1
+psycopg2==2.9.3
+pyparsing==3.0.7
+python-dateutil==2.8.2
 python-decouple==3.4
 pytz==2021.1
+scikit-learn==1.0.2
+scipy==1.8.0
 six==1.16.0
 sqlparse==0.4.1
-numpy~=1.22.3
+threadpoolctl==3.1.0
